Changed structure and parsing algorithm

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,6 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <color name="colorPrimary">#FFFFFF</color>
-    <color name="colorPrimaryDark">#BFBFBF</color>
+    <color name="colorPrimaryDark">#583227</color>
     <color name="colorAccent">#7e4839</color>
+
+    <color name="currentDayText">#000000</color>
+    <color name="currentDayText1">#3269df</color>
+    <color name="currentDayText2">#000000</color>
+    <color name="currentDayText3">#b70003</color>
+    <color name="otherDayText1">#6b6b6b</color>
+    <color name="otherDayText">#939393</color>
 </resources>
