--- a/app/src/main/res/layout/content_scrolling.xml
+++ b/app/src/main/res/layout/content_scrolling.xml
@@ -5,8 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
-    tools:context="jonas.jacobsson.midgardensvardshus.matsedeln.ScrollingActivity"
-    tools:showIn="@layout/activity_scrolling"
+    tools:context=".activities.MainActivity"
     android:background="@color/colorPrimary">
 
 
