--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -8,20 +8,17 @@
     android:orientation="vertical">
 
     <LinearLayout
-        android:id="@+id/main_ll"
+        android:id="@+id/ll_logo"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_above="@+id/main_bottom_bar"
+        android:layout_height="wrap_content"
+        android:layout_alignParentTop="true"
         android:orientation="vertical">
 
         <ImageView
             android:id="@+id/main_header_logo"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:paddingEnd="@dimen/main_logo_padding_start_end"
-            android:paddingLeft="@dimen/main_logo_padding_start_end"
-            android:paddingRight="@dimen/main_logo_padding_start_end"
-            android:paddingStart="@dimen/main_logo_padding_start_end"
+            android:layout_height="100dp"
+            android:padding="@dimen/main_logo_padding_start_end"
             android:paddingTop="@dimen/main_logo_padding_top_bottom"
             android:src="@drawable/logo" />
 
@@ -36,138 +33,25 @@
             android:layout_marginTop="@dimen/main_logo_divider_margin_top"
             android:background="@color/colorPrimary" />
 
-        <RelativeLayout
-            android:id="@+id/main_menu_rl"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginBottom="1dp"
-            android:layout_marginEnd="5dp"
-            android:layout_marginLeft="5dp"
-            android:layout_marginRight="5dp"
-            android:layout_marginStart="5dp"
-            android:visibility="gone">
-
-            <TextView
-                android:id="@+id/week_num_tv"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:gravity="center_horizontal"
-                android:padding="5dp"
-                android:textColor="@color/currentDayText"
-                android:textSize="14sp"
-                android:textStyle="bold"/>
-
-            <android.support.v4.widget.SwipeRefreshLayout
-                android:id="@+id/swipe_refresh"
-                android:layout_width="wrap_content"
-                android:layout_height="match_parent"
-                android:layout_marginTop="30dp">
-
-                <!--<ScrollView-->
-                    <!--android:layout_width="match_parent"-->
-                    <!--android:layout_height="match_parent"-->
-                    <!--android:scrollbars="vertical">-->
-
-                    <ListView
-                        android:id="@+id/week_list_view"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:layout_marginBottom="10dp"
-                        android:layout_marginTop="10dp"
-                        android:orientation="vertical"
-                        tools:listitem="@layout/week_item">
-
-                        <!--Week items-->
-
-                    </ListView>
-
-                <!--</ScrollView>-->
-
-            </android.support.v4.widget.SwipeRefreshLayout>
-
-        </RelativeLayout>
-
-        <LinearLayout
-            android:id="@+id/main_map_ll"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_marginBottom="1dp"
-            android:layout_marginEnd="5dp"
-            android:layout_marginLeft="5dp"
-            android:layout_marginRight="5dp"
-            android:layout_marginStart="5dp"
-            android:orientation="vertical"
-            android:visibility="visible">
-
-
-            <fragment
-                android:id="@+id/map_fragment"
-                android:name="com.google.android.gms.maps.MapFragment"
-                android:layout_width="match_parent"
-                android:layout_height="0dp"
-                android:layout_weight="5"/>
-
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:orientation="horizontal"
-                android:layout_weight="1"
-                android:padding="20dp">
-
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="@string/find_us"
-                    android:textSize="18sp"
-                    android:textStyle="bold"
-                    android:layout_weight="1"
-                    />
-                <LinearLayout
-                    android:id="@+id/map_click_for_directions"
-                    android:layout_width="wrap_content"
-                    android:layout_height="match_parent"
-                    android:orientation="vertical"
-                    android:layout_weight="1">
-
-                    <TextView
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:text="@string/name"
-                        android:textSize="16sp"
-                        android:textStyle="bold"
-                        />
-
-                    <TextView
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:text="@string/address"
-                        android:textSize="16sp"
-                        />
-
-                </LinearLayout>
-
-            </LinearLayout>
-        </LinearLayout>
-
-        <LinearLayout
-            android:id="@+id/main_contact_ll"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:orientation="vertical"
-            android:visibility="gone">
-
-            <!--Suggest meal formulae-->
-
-        </LinearLayout>
     </LinearLayout>
 
-    <com.roughike.bottombar.BottomBar
-        android:id="@+id/main_bottom_bar"
+    <RelativeLayout
+        android:id="@+id/rl_tabs"
         android:layout_width="match_parent"
-        android:layout_height="60dp"
-        android:layout_alignParentBottom="true"
-        android:orientation="vertical"
-        app:bb_tabXmlResource="@xml/bottombar_tabs" />
+        android:layout_height="match_parent"
+        android:layout_below="@id/ll_logo">
+
+
+
+        <com.roughike.bottombar.BottomBar
+            android:id="@+id/main_bottom_bar"
+            android:layout_width="match_parent"
+            android:layout_height="60dp"
+            android:layout_alignParentBottom="true"
+            android:orientation="vertical"
+            app:bb_tabXmlResource="@xml/bottombar_tabs" />
+
+    </RelativeLayout>
 
 </RelativeLayout>
 
