--- a/app/src/main/res/layout/fragment_menu.xml
+++ b/app/src/main/res/layout/fragment_menu.xml
@@ -12,37 +12,6 @@
     android:layout_marginStart="5dp"
     android:visibility="visible">
 
-
-    <LinearLayout
-        android:orientation="horizontal"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintLeft_toLeftOf="parent"
-        android:id="@+id/ll_menu_info">
-
-        <TextView
-            android:id="@+id/tv_week_number"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:textColor="@color/currentDayText"
-            android:textSize="14sp"
-            android:textStyle="bold"
-            android:layout_weight="1"
-            android:layout_marginEnd="8dp"
-            android:layout_marginRight="8dp"/>
-
-        <TextView
-            android:id="@+id/tv_lunch_times"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="@string/times_lunch"
-            android:textColor="@color/currentDayText"
-            android:layout_weight="1" />
-    </LinearLayout>
-
-
     <android.support.v4.widget.SwipeRefreshLayout
         android:id="@+id/swipe_refresh"
         android:layout_width="0dp"
@@ -51,8 +20,7 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/ll_menu_info"
-        android:layout_marginTop="8dp">
+        app:layout_constraintTop_toTopOf="parent">
 
         <!--<ScrollView-->
         <!--android:layout_width="match_parent"-->
@@ -62,7 +30,7 @@
         <ListView
             android:id="@+id/week_list_view"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="match_parent"
             android:orientation="vertical"
             tools:listitem="@layout/week_item">
 
