--- a/app/src/main/res/layout/week_item.xml
+++ b/app/src/main/res/layout/week_item.xml
@@ -1,42 +1,36 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_height="wrap_content"
     android:orientation="vertical"
-    android:padding="10dp">
+    android:padding="16dp">
 
     <TextView
         android:id="@+id/week_item_day"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="19dp"
         android:text="day"
         android:textAlignment="center"
         android:textSize="16sp"
         android:textStyle="bold"
-        android:textColor="@color/currentDayText"/>
+        android:textColor="@color/currentDayText"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintLeft_toLeftOf="parent"
+        android:layout_width="0dp"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
-        android:id="@+id/week_item_food_alt1"
-        android:layout_width="match_parent"
+        android:id="@+id/week_item_food"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:text="foodAlt1"
         android:textAlignment="center"
         android:textSize="14sp"
-        android:layout_marginTop="5dp"/>
-
-    <TextView
-        android:id="@+id/week_item_divider"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="divider"
-        android:textAlignment="center"
-        android:textSize="14sp" />
-
-    <TextView
-        android:id="@+id/week_item_food_alt2"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="foodAlt1"
-        android:textAlignment="center"
-        android:textSize="14sp"/>
-</LinearLayout>
+        app:layout_constraintTop_toBottomOf="@+id/week_item_day"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintLeft_toLeftOf="parent"
+        android:layout_marginTop="8dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        android:text="food" />
+</android.support.constraint.ConstraintLayout>
