--- a/app/src/main/res/layout/fragment_map.xml
+++ b/app/src/main/res/layout/fragment_map.xml
@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/main_map_ll"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -16,15 +15,15 @@
     <com.google.android.gms.maps.MapView
         android:id="@+id/map_view"
         android:layout_width="0dp"
-        app:layout_constraintBottom_toTopOf="@+id/tv_find_us"
-        android:layout_marginBottom="16dp"
         android:layout_height="0dp"
-        android:layout_marginTop="8dp"
-        app:layout_constraintTop_toTopOf="parent"
+        android:layout_marginBottom="16dp"
         android:layout_marginEnd="8dp"
-        app:layout_constraintRight_toRightOf="parent"
         android:layout_marginStart="8dp"
-        app:layout_constraintLeft_toLeftOf="parent" />
+        android:layout_marginTop="8dp"
+        app:layout_constraintBottom_toTopOf="@+id/tv_find_us"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
 
     <TextView
@@ -43,36 +42,36 @@
         android:id="@+id/tv_find_us"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginBottom="8dp"
         android:layout_marginStart="16dp"
         android:layout_weight="1"
         android:text="@string/find_us"
         android:textSize="18sp"
         android:textStyle="bold"
-        app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintBottom_toTopOf="@+id/tv_name"
-        android:layout_marginBottom="8dp" />
+        app:layout_constraintLeft_toLeftOf="parent" />
 
 
     <TextView
         android:id="@+id/tv_name"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginBottom="4dp"
         android:text="@string/name"
         android:textStyle="bold"
-        app:layout_constraintLeft_toLeftOf="@+id/tv_find_us"
-        app:layout_constraintRight_toRightOf="@+id/tv_find_us"
         app:layout_constraintBottom_toTopOf="@+id/tv_address"
-        android:layout_marginBottom="4dp" />
+        app:layout_constraintLeft_toLeftOf="@+id/tv_find_us"
+        app:layout_constraintRight_toRightOf="@+id/tv_find_us" />
 
     <TextView
         android:id="@+id/tv_address"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
+        android:layout_marginBottom="76dp"
         android:text="@string/address"
-        app:layout_constraintLeft_toLeftOf="@+id/tv_name"
-        app:layout_constraintRight_toRightOf="@+id/tv_name"
         app:layout_constraintBottom_toBottomOf="parent"
-        android:layout_marginBottom="76dp" />
+        app:layout_constraintLeft_toLeftOf="@+id/tv_name"
+        app:layout_constraintRight_toRightOf="@+id/tv_name" />
 
 
     <TextView
