--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -6,39 +6,10 @@
     android:layout_height="match_parent"
     android:orientation="vertical">
 
-    <LinearLayout
-        android:id="@+id/ll_logo"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_alignParentTop="true"
-        android:orientation="vertical">
-
-        <ImageView
-            android:id="@+id/main_header_logo"
-            android:layout_width="match_parent"
-            android:layout_height="100dp"
-            android:padding="@dimen/main_logo_padding_start_end"
-            android:paddingTop="@dimen/main_logo_padding_top_bottom"
-            android:src="@drawable/logo" />
-
-        <View
-            android:id="@+id/main_logo_divider"
-            android:layout_width="match_parent"
-            android:layout_height="@dimen/main_logo_divider_height"
-            android:layout_marginEnd="@dimen/main_logo_divider_margin_start_end"
-            android:layout_marginLeft="@dimen/main_logo_divider_margin_start_end"
-            android:layout_marginRight="@dimen/main_logo_divider_margin_start_end"
-            android:layout_marginStart="@dimen/main_logo_divider_margin_start_end"
-            android:layout_marginTop="@dimen/main_logo_divider_margin_top"
-            android:background="@color/colorPrimary" />
-
-    </LinearLayout>
-
     <RelativeLayout
         android:id="@+id/rl_tabs"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_below="@id/ll_logo">
+        android:layout_height="match_parent">
 
         <com.roughike.bottombar.BottomBar
             android:id="@+id/main_bottom_bar"
