--- a/app/src/main/res/layout/activity_contact.xml
+++ b/app/src/main/res/layout/activity_contact.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:layout_marginBottom="60dp">
@@ -11,9 +12,9 @@
         android:orientation="vertical">
 
 
-        <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
+            android:layout_height="wrap_content"
             android:orientation="vertical"
             android:layout_marginEnd="8dp"
             android:layout_marginLeft="8dp"
@@ -24,109 +25,97 @@
                 android:id="@+id/top_layout"
                 layout="@layout/top_layout" />
 
-            <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+            <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:orientation="vertical"
-                android:layout_below="@id/top_layout">
+                android:layout_height="wrap_content"
+                android:orientation="vertical">
 
                 <TextView
                     android:id="@+id/textView5"
-                    android:layout_width="match_parent"
-                    android:layout_height="25dp"
-                    android:layout_alignParentTop="true"
-                    android:layout_centerHorizontal="true"
-                    android:layout_margin="20dp"
-                    android:fontFamily="sans-serif-condensed"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_marginLeft="16dp"
+                    android:layout_marginRight="16dp"
+                    android:layout_marginTop="32dp"
                     android:text="Ge förslag på vad du vill ha till lunch eller catering!"
                     android:textAlignment="center"
-                    android:textSize="18sp" />
+                    android:textAppearance="@style/TitleFont"
+                    app:layout_constraintLeft_toLeftOf="parent"
+                    app:layout_constraintRight_toRightOf="parent"
+                    app:layout_constraintTop_toTopOf="parent" />
 
                 <TextView
                     android:id="@+id/textView2"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_alignParentStart="true"
-                    android:layout_below="@+id/textView5"
-                    android:layout_marginStart="40dp"
-                    android:text="Namn:" />
+                    android:text="Namn:"
+                    android:layout_marginTop="16dp"
+                    app:layout_constraintTop_toBottomOf="@+id/textView5"
+                    android:layout_marginLeft="8dp"
+                    app:layout_constraintLeft_toLeftOf="@+id/et_name" />
 
                 <EditText
                     android:id="@+id/et_name"
-                    android:layout_width="match_parent"
+                    android:layout_width="0dp"
                     android:layout_height="wrap_content"
-                    android:layout_alignParentStart="true"
-                    android:layout_below="@+id/textView2"
-                    android:layout_marginBottom="32dp"
-                    android:layout_marginEnd="32dp"
-                    android:layout_marginLeft="32dp"
-                    android:layout_marginRight="32dp"
-                    android:layout_marginStart="32dp"
                     android:ems="10"
                     android:hint="Skriv ditt name här..."
                     android:inputType="textPersonName|textCapWords"
                     android:textColorHint="@color/otherDayText"
-                    android:windowSoftInputMode="stateAlwaysHidden" />
+                    android:windowSoftInputMode="stateAlwaysHidden"
+                    android:layout_marginTop="0dp"
+                    app:layout_constraintTop_toBottomOf="@+id/textView2"
+                    android:layout_marginLeft="16dp"
+                    app:layout_constraintLeft_toLeftOf="parent"
+                    android:layout_marginRight="16dp"
+                    app:layout_constraintRight_toRightOf="parent"
+                    app:layout_constraintHorizontal_bias="0.437" />
 
-                <TextView
-                    android:id="@+id/textView3"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_alignStart="@+id/textView2"
-                    android:layout_below="@+id/et_name"
-                    android:text="E-post:" />
-
-                <EditText
-                    android:id="@+id/et_email"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_alignParentStart="true"
-                    android:layout_below="@+id/textView3"
-                    android:layout_marginBottom="32dp"
-                    android:layout_marginEnd="32dp"
-                    android:layout_marginLeft="32dp"
-                    android:layout_marginRight="32dp"
-                    android:layout_marginStart="32dp"
-                    android:ems="10"
-                    android:hint="Skriv din e-post här..."
-                    android:inputType="textEmailAddress"
-                    android:textColorHint="@color/otherDayText"
-                    android:windowSoftInputMode="stateAlwaysHidden" />
 
                 <TextView
                     android:id="@+id/textView4"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_alignLeft="@+id/textView3"
-                    android:layout_alignStart="@+id/textView3"
-                    android:layout_below="@+id/et_email"
-                    android:text="Förslag:" />
+                    android:text="Förslag:"
+                    android:layout_marginTop="31dp"
+                    app:layout_constraintTop_toBottomOf="@+id/et_name"
+                    android:layout_marginLeft="8dp"
+                    app:layout_constraintLeft_toLeftOf="@+id/et_text" />
 
                 <EditText
-                    android:id="@+id/et_forslag"
-                    android:layout_width="match_parent"
+                    android:id="@+id/et_text"
+                    android:layout_width="0dp"
                     android:layout_height="wrap_content"
-                    android:layout_below="@+id/textView4"
-                    android:layout_marginEnd="32dp"
-                    android:layout_marginLeft="32dp"
-                    android:layout_marginRight="32dp"
-                    android:layout_marginStart="32dp"
+                    android:layout_marginLeft="16dp"
+                    android:layout_marginRight="16dp"
+                    android:layout_marginTop="0dp"
                     android:ems="10"
+                    android:gravity="top|start"
                     android:hint="Skriv ditt förslag här..."
-                    android:inputType="textAutoComplete|textCapSentences|textMultiLine"
+                    android:inputType="textCapSentences|textAutoComplete|textMultiLine|textLongMessage"
+                    android:selectAllOnFocus="false"
+                    android:singleLine="false"
                     android:textColorHint="@color/otherDayText"
-                    android:windowSoftInputMode="stateAlwaysHidden" />
+                    android:windowSoftInputMode="stateAlwaysHidden"
+                    app:layout_constraintHorizontal_bias="0.0"
+                    app:layout_constraintLeft_toLeftOf="parent"
+                    app:layout_constraintRight_toRightOf="parent"
+                    app:layout_constraintTop_toBottomOf="@+id/textView4" />
 
                 <Button
                     android:id="@+id/btn_send"
-                    android:layout_width="150dp"
+                    android:layout_width="0dp"
                     android:layout_height="50dp"
-                    android:layout_alignEnd="@+id/et_forslag"
-                    android:layout_below="@+id/et_forslag"
-                    android:layout_marginTop="20dp"
-                    android:text="Skicka" />
+                    android:layout_marginRight="8dp"
+                    android:text="Skicka"
+                    app:layout_constraintTop_toBottomOf="@id/et_text"
+                    app:layout_constraintRight_toRightOf="parent"
+                    android:layout_marginLeft="8dp"
+                    app:layout_constraintLeft_toLeftOf="parent"
+                    app:layout_constraintHorizontal_bias="0.0"
+                    android:layout_marginTop="16dp" />
 
-            </RelativeLayout>
-        </RelativeLayout>
+            </android.support.constraint.ConstraintLayout>
+        </LinearLayout>
     </ScrollView>
 </RelativeLayout>
