--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -31,7 +31,7 @@
         <item name="android:layout_height">wrap_content</item>
         <item name="android:textColor">@color/otherDayText</item>
         <item name="android:layout_marginTop">20dp</item>
-        <item name="android:textAlignment">center</item>
+        <item name="android:gravity">center</item>
         <item name="android:textStyle">normal|bold</item>
     </style>
 
@@ -40,7 +40,7 @@
         <item name="android:layout_height">wrap_content</item>
         <item name="android:textColor">@color/otherDayText</item>
         <item name="android:layout_marginTop">20dp</item>
-        <item name="android:textAlignment">center</item>
+        <item name="android:gravity">center</item>
         <item name="android:textStyle">normal|bold</item>
     </style>
 
@@ -48,7 +48,13 @@
         <item name="android:layout_width">match_parent</item>
         <item name="android:layout_height">wrap_content</item>
         <item name="android:textColor">@color/otherDayText</item>
-        <item name="android:textAlignment">center</item>
+        <item name="android:gravity">center</item>
+    </style>
+
+    <style name="TitleFont" parent="@android:style/TextAppearance.Large">
+        <item name="android:textColor">@color/colorAccent</item>
+        <item name="android:gravity">center</item>
+        <item name="android:textStyle">normal</item>
     </style>
 
 </resources>
